...
                                        <subviews>
                                            <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="B0W-Yf-lKO">
                                                <rect key="frame" x="0.0" y="7" width="126" height="50"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="50" id="OB9-np-duG"/>
                                                </constraints>
                                                <state key="normal" image="Git"/>
                                                <connections>
                                                    <action selector="gitHubButtonpress:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="UX9-zm-mRD"/>
                                                </connections>
                                            </button>
                                        </subviews>
                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
